--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mysql-connector-python==8.0.23
+protobuf==3.15.3
 requests==2.24.0
+six==1.15.0
 soupsieve==2.0.1
 urllib3==1.25.11
 Werkzeug==1.0.1
