--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-beautifulsoup4==4.9.3
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-Flask==1.1.2
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-mysql-connector-python==8.0.23
-protobuf==3.15.3
-requests==2.24.0
-six==1.15.0
-soupsieve==2.0.1
-urllib3==1.25.11
-Werkzeug==1.0.1
+click==8.1.2
+Flask==2.1.1
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+mysql-connector-python==8.0.28
+protobuf==3.19.4
+Werkzeug==2.1.1
+zipp==3.7.0
